Opened 19 years ago
Closed 16 years ago
#591 closed bug (fixed)
[Deskbar] doesn't redraw it's shelf
Reported by: | diver | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Deskbar | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Deskbar doesn't redraw it's shelf if you open calendar: hold left or middle mouse button on deskbar's shelf for a second so calendar will appear and then click and hold shelf again. You should see deskbar window not to draw its content for a half of second.
Change History (10)
comment:1 by , 19 years ago
Owner: | changed from | to
---|
comment:2 by , 19 years ago
comment:3 by , 18 years ago
Description: | modified (diff) |
---|---|
Platform: | → All |
This specific problem is gone after Waldemar's changes in rev 19349 and 19350. The calendar, though, doesn't close when you click on the deskbar the second time. But this is a different problem which, I think, should be fixed within the app_server ( see also comment 4 in bug #670 )
comment:5 by , 17 years ago
Component: | - Applications → - Applications/Deskbar |
---|
Move to the proper component.
comment:8 by , 17 years ago
Well i looked at the code, and there's a (~0.5sec) waiting loop in MouseDown to detect the long click. So i would say it is expected that the deskbar can't do anything during that time, or am i missing something?
I did a quick rewrite of the long click detection using a separate class/thread that sends "long click" messages to the view, it's cool and working but, before i cleanup and commit, i wonder if there wasn't a simpler solution or if i'm not working around a problem that should get fixed in the first place :-)
regards
comment:9 by , 17 years ago
You could also just set up a half second BMessageRunner :) Busy waiting in MouseDown would definitely be an issue though.
Under BeOS, the menu doesn't open again, and that's probably how they get around this.