* Rewrote long click mouse tracking. This avoids busy looping in TimeView::MouseDown and fixes #591. The helper class could be reused for similar situations (ex: Tracker context menu and drag detection). See the brief doc in the code. Comments welcomed!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27258 a95241bf-73f2-0310-859d-f6bbb57e9c96